<resources>
    <string name="app_name">MotorSport</string>
    <string name="motorsport_club">Motorsport Club</string>
    <string name="nation_wide_motorcycle_club">Nation Wide Motorcycle Club</string>
    <string name="hello_there_welcome_back">Hello there, Welcome back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="usernameLogin">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_sign_up">New User? Sign Up!</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_your_new_journey">Sign up to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="usernameSignup">Username</string>
    <string name="email">Email</string>
    <string name="phone_n">Phone Nº</string>
    <string name="passwordSignup">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="nuno_coelho">Nuno Coelho</string>
    <string name="coelho">Coelho</string>
    <string name="leiria">Leiria</string>
    <string name="ktm_1090">KTM 1090</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="abc123">abc123</string>
    <string name="update">Update</string>
    <string name="username">username</string>
    <string name="localization">Localization</string>
    <string name="motorcycle">Motorcycle</string>
</resources>