<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fece2f"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/caferacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/motocaferacer"
        android:transitionName="logoImage"
        app:layout_constraintBottom_toTopOf="@+id/motorsportTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/motorsportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/motorsport_club"
        android:textSize="54sp"
        android:transitionName="logoText"
        app:layout_constraintBottom_toTopOf="@id/motorsportSlogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caferacer"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/motorsportSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/peddana"
        android:gravity="center"
        android:text="@string/nation_wide_motorcycle_club"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorsportTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>